<resources>
    <string name="app_name">VendPay</string>
    <string name="facebook_app_id">636078987012973</string>
    <string name="fb_login_protocol_scheme">fb636078987012973</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="id">ID</string>
    <string name="balance">Balance</string>
    <string name="connect_to_device">Scan QR</string>
    <string name="add_balance">Add Balance</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="contact">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="amount">Amount</string>
    <string name="receiver_id_">Receiver ID</string>
    <string name="unique_key">Verification code</string>
    <string name="will_send_to_receiver">After clicking the button the receiver will get that verification code</string>
    <string name="code_sent">After clicking the button you will get that verification code by e-mail</string>
    <string name="sms_sent">After clicking the button you will get that verification code by SMS</string>
    <string name="complete">Send</string>
    <string name="refresh">Refresh</string>
    <string name="select_card">Last card</string>
    <string name="ending_with">Ending with</string>
    <string name="use_new_card">Use new card</string>
    <string name="card_holder">Card holder</string>
    <string name="card_number">Card number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="from">From</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="qr">Please focus on QR code</string>
    <string name="cvv">CVV</string>
    <string name="todo">TODO</string>
    <string name="help">Need help?</string>
    <string name="no_saved_cards">No saved cards</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="bt_not_supported">Bluetooth is not supported on this device</string>
    <string name="warning">Warning</string>
    <string name="mail_required">E-mail is required</string>
    <string name="no_whitespaces">No whitespaces</string>
    <string name="wrong_mail">Wrong e-mail</string>
    <string name="wrong_ID">Wrong ID</string>
    <string name="pass_required">Password is required</string>
    <string name="pass_match">Passwords do not match</string>
    <string name="user_not_found">User not found</string>
    <string name="success">Success</string>
    <string name="pass_changed">Password changed</string>
    <string name="connecting">Connecting . . .</string>
    <string name="permission_required">Permission required</string>
    <string name="need_camera">Vendpay needs camera to read QR code</string>
    <string name="allow">Allow</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_allowed">Camera access is denied. You must give access from settings</string>
    <string name="gel">GEL</string>
    <string name="wrong_pass">Password is wrong</string>
    <string name="username_required">Username is required</string>
    <string name="phone_required">Phone is required</string>
    <string name="wrong_number">Wrong number</string>
    <string name="wrong_value">Wrong value</string>
    <string name="mail_exists">E-mail already exists</string>
    <string name="phone_exists">Phone number already exists</string>
    <string name="amount_required">Amount is required</string>
    <string name="incorrect_amount">Please enter correct amount</string>
    <string name="not_money">You don\'t have that money in your account</string>
    <string name="sent">sent to receiver</string>
    <string name="wrong_unique">Verification code is wrong</string>
    <string name="completed">Operation completed</string>
    <string name="no_request">Verification code not received</string>
    <string name="will_use_bt">The app will use bluetooth</string>
    <string name="change_lang">Change Language</string>
    <string name="home">Home</string>
    <string name="error_occ">An error occurred. Please try again later</string>
    <string name="onetime">Enter the onetime code sent to you via SMS.</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="successfully">The operation finished successfully.</string>
    <string name="sending">You are sending </string>
    <string name="conf"> GEL on the Vending device. Do you confirm?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="req_ver_code">Request code</string>
    <string name="got">Got it</string>
    <string name="how_it_works">How it works?</string>
    <string name="transactions">Transaction History</string>
    <string name="comp">Complete</string>
    <string name="save_">Do you want to save this card as default?</string>
    <string name="account">Account</string>
    <string name="new_mail">New Email</string>
    <string name="new_phone">New Phone Number</string>
    <string name="pay_method">Payment Method</string>
    <string name="default_payment">You need to increase the balance to add a payment method. After that, you can set the card as default</string>
    <string name="try_login">You have changed your password. Try to login</string>
    <string name="busy">The Vend is busy</string>
    <string name="verify">Please verify your phone number</string>
    <string name="minimum_amount">Minimum allowed amount is 0.50 GEL</string>
    <string name="remember">Remember me</string>
    <string name="exact">Exact amount</string>
    <string name="terms">Terms and Conditions</string>
    <string name="policy">Information Protection Policy</string>
    <string name="n"></string>
</resources>
