<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/account"
        app:showAsAction="never"
        android:title="@string/account">
    </item>
    <item
        android:id="@+id/addBalance"
        app:showAsAction="never"
        android:title="@string/add_balance">
    </item>
    <item
        android:id="@+id/transfer"
        app:showAsAction="never"
        android:title="@string/transfer_money">
    </item>
    <item
        android:id="@+id/transactions"
        app:showAsAction="never"
        android:title="@string/transactions">
    </item>
    <item
        android:id="@+id/changeLang"
        app:showAsAction="never"
        android:title="@string/change_lang">
    </item>
    <item
        android:id="@+id/terms"
        app:showAsAction="never"
        android:title="@string/terms">
    </item>
    <item
        android:id="@+id/policy"
        app:showAsAction="never"
        android:title="@string/policy">
    </item>
    <item
        android:id="@+id/contact"
        app:showAsAction="never"
        android:title="@string/contact">
    </item>
    <item
        android:id="@+id/logout"
        app:showAsAction="never"
        android:title="@string/logout">
    </item>
</menu>