<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#EEEFF1"
    android:weightSum="10"
    tools:context=".ActivityFirst">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">
    </Space>
    <ImageView
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight=".7"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/first_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight=".7"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/first_btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:text="@string/register"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/or"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:textSize="24sp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight=".7"
        app:cardBackgroundColor="#3578E5"
        app:cardCornerRadius="15dp">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/first_btnFb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">
    </Space>
    <Button
        android:id="@+id/first_btnTerms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:background="#00FFFFFF"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:gravity="bottom|center"
        android:text="@string/terms"
        android:textAllCaps="false"
        android:textColor="#085473"
        android:textSize="18sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">
    </Space>
    <Button
        android:id="@+id/first_btnPolicy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:background="#00FFFFFF"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:gravity="bottom|center"
        android:text="@string/policy"
        android:textAllCaps="false"
        android:textColor="#085473"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:textColor="#000000"
        android:text="@string/help"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/first_btnContact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/contact"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:textAllCaps="false"
        android:textColor="#085473"
        android:textSize="18sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9">
    </Space>
</LinearLayout>