<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTransferMoney"
    android:orientation="vertical"
    android:background="#EEEFF1"
    android:gravity="center_horizontal"
    android:weightSum="10">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">
    </Space>
    <ImageButton
        android:id="@+id/transfer_money_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background" />
    <TextView
        android:id="@+id/transfer_money_txtId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:gravity="center"
        android:text="@string/id"
        android:textColor="#000000"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/transfer_money_txtBalance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:gravity="center"
        android:text="@string/balance"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:textColor="#000000"
        android:textSize="24sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/transfer_money_btnSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:text="@string/send"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/transfer_money_btnReceive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:text="@string/receive"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
</LinearLayout>