<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:orientation="vertical"
    android:background="#EEEFF1"
    android:gravity="center_horizontal"
    android:weightSum="10">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">
    </Space>
    <ImageButton
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.8"
        app:cardCornerRadius="15dp">
        <EditText
            android:id="@+id/login_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:ems="10"
            android:textCursorDrawable="@drawable/color_cursor"
            android:hint="@string/e_mail"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:autofillHints="E-mail" />
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.8"
        app:cardCornerRadius="15dp">
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:textCursorDrawable="@drawable/color_cursor"
            android:ems="10"
            android:hint="@string/password"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:autofillHints="Password" />
    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight=".8"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:text="@string/remember" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6">
    </Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:text="@string/login"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/login_btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_weight=".4"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:textAllCaps="false"
        android:textColor="#085473"
        android:textSize="16sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
    </Space>
</LinearLayout>