<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEFF1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ActivityAddBalanceWithCard">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></Space>
    <ImageButton
        android:id="@+id/add_balance_with_card_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.8"
        app:cardCornerRadius="15dp">
        <EditText
            android:id="@+id/add_balance_with_card_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Amount"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start|bottom"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:text="@string/select_card"
        android:textColor="#000000"
        android:textSize="18sp" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.8"
        app:cardCornerRadius="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:srcCompat="@drawable/cardicon" />
            <TextView
                android:id="@+id/add_balance_with_card_last4Digits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6.5"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/ending_with"
                android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"></Space>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/add_balance_with_card_btnAddBalance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:text="@string/add_balance"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/or"
        android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
        android:textColor="#000000"
        android:textSize="18sp" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp">
        <Button
            android:id="@+id/add_balance_with_card_btnAddCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTheme"
            android:text="@string/use_new_card"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/bpg_extrasquare_mtavruli_2009"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>
</LinearLayout>